# ROCm-mini-nbody

./: CMakeLists.txt
cuda/: nbody-block.hip  nbody-orig.hip  nbody-soa.hip
hip/: nbody-block.hip  nbody-orig.hip  nbody-soa.hip  nbody-unroll.hip
mic/: nbody-align.c  nbody-block.c  nbody-soa.c
